--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,10 +24,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
+          - target: i686-pc-windows-msvc
+            os: windows-latest
+          - target: i686-pc-windows-gnu
+            os: windows-latest
+          #- target: aarch64-unknown-linux-gnu
+            #os: ubuntu-latest
+          #- target: aarch64-apple-darwin
+            #os: macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
