--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
         include:
           - target: i686-pc-windows-msvc
             os: windows-latest
-          - target: i686-pc-windows-gnu
-            os: windows-latest
+          #- target: i686-pc-windows-gnu
+          #  os: windows-latest
           #- target: aarch64-unknown-linux-gnu
             #os: ubuntu-latest
           #- target: aarch64-apple-darwin
