--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,6 @@ jobs:
       - uses: taiki-e/create-gh-release-action@v1
         with:
           # (optional) Path to changelog.
-          #changelog: CHANGELOG.md
           # (required) GitHub token for creating GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -25,13 +24,7 @@ jobs:
       matrix:
         include:
           - target: i686-pc-windows-msvc
-            os: windows-latest
-          #- target: i686-pc-windows-gnu
-          #  os: windows-latest
-          #- target: aarch64-unknown-linux-gnu
-            #os: ubuntu-latest
-          #- target: aarch64-apple-darwin
-            #os: macos-latest
+            os: ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
