--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Install MSVC
-        uses: TheMrMilchmann/setup-msvc-dev@v2
-        with:
-          arch: x86
+      #- name: Install MSVC
+        #uses: TheMrMilchmann/setup-msvc-dev@v2
+        #with:
+          #arch: x86
       - name: Install cross-compilation tools
         uses: taiki-e/setup-cross-toolchain-action@v1
         with:
